Adds trash cans

--- a/level1.yml
+++ b/level1.yml
@@ -72,20 +72,20 @@
     :factor_y: 1.0
     :alpha: 255
 - Car:
-    :x: 768.0
+    :x: 576.0
     :y: 416.0
-    :angle: 14925
+    :angle: 0
     :zorder: 100
-    :factor_x: 1.0
-    :factor_y: 1.0
+    :factor_x: 1
+    :factor_y: 1
     :alpha: 255
 - Car:
-    :x: 960.0
-    :y: 320.0
-    :angle: 14865
+    :x: 1120.0
+    :y: 416.0
+    :angle: 0
     :zorder: 100
-    :factor_x: 1.0
-    :factor_y: 1.0
+    :factor_x: 1
+    :factor_y: 1
     :alpha: 255
 - PassableBox:
     :x: 1056.0
@@ -110,4 +110,20 @@
     :zorder: 100
     :factor_x: 1.0
     :factor_y: 1.0
+    :alpha: 255
+- Car:
+    :x: 702.0
+    :y: 408.0
+    :angle: 0
+    :zorder: 100
+    :factor_x: 1
+    :factor_y: 1
+    :alpha: 255
+- Car:
+    :x: 832.0
+    :y: 408.0
+    :angle: 0
+    :zorder: 100
+    :factor_x: 1
+    :factor_y: 1
     :alpha: 255
