--- a/level1.yml
+++ b/level1.yml
@@ -24,8 +24,8 @@
     :factor_y: 1.0
     :alpha: 255
 - Bat:
-    :x: 481.0
-    :y: 96.0
+    :x: 512.0
+    :y: 64.0
     :angle: 0
     :zorder: 100
     :factor_x: 1.0
@@ -64,7 +64,7 @@
     :factor_y: 1.0
     :alpha: 255
 - Bat:
-    :x: 704.0
+    :x: 745.0
     :y: 0.0
     :angle: 0
     :zorder: 100
@@ -104,7 +104,7 @@
     :factor_y: 1.0
     :alpha: 255
 - Bat:
-    :x: 743.0
+    :x: 784.0
     :y: -63.0
     :angle: 0
     :zorder: 100
@@ -128,10 +128,18 @@
     :factor_y: 1.0
     :alpha: 255
 - Bat:
-    :x: 256.0
-    :y: 96.0
+    :x: 128.0
+    :y: 160.0
     :angle: 0
     :zorder: 100
     :factor_x: 1.0
     :factor_y: 1.0
+    :alpha: 255
+- Bat:
+    :x: 416.0
+    :y: 32.0
+    :angle: 0
+    :zorder: 100
+    :factor_x: 1
+    :factor_y: 1
     :alpha: 255
