--- a/level1.yml
+++ b/level1.yml
@@ -24,7 +24,7 @@
     :factor_y: 1.0
     :alpha: 255
 - Bat:
-    :x: 512.0
+    :x: 573.0
     :y: 64.0
     :angle: 0
     :zorder: 100
@@ -64,7 +64,7 @@
     :factor_y: 1.0
     :alpha: 255
 - Bat:
-    :x: 745.0
+    :x: 808.0
     :y: 0.0
     :angle: 0
     :zorder: 100
@@ -104,7 +104,7 @@
     :factor_y: 1.0
     :alpha: 255
 - Bat:
-    :x: 784.0
+    :x: 837.0
     :y: -63.0
     :angle: 0
     :zorder: 100
@@ -128,7 +128,7 @@
     :factor_y: 1.0
     :alpha: 255
 - Bat:
-    :x: 128.0
+    :x: 145.0
     :y: 160.0
     :angle: 0
     :zorder: 100
@@ -136,8 +136,40 @@
     :factor_y: 1.0
     :alpha: 255
 - Bat:
-    :x: 416.0
+    :x: 377.0
     :y: 32.0
+    :angle: 0
+    :zorder: 100
+    :factor_x: 1.0
+    :factor_y: 1.0
+    :alpha: 255
+- GoalTree:
+    :x: 2528.0
+    :y: 512.0
+    :angle: 0
+    :zorder: 100
+    :factor_x: 1.0
+    :factor_y: 1.0
+    :alpha: 255
+- Bat:
+    :x: 1728.0
+    :y: 160.0
+    :angle: 0
+    :zorder: 100
+    :factor_x: 1
+    :factor_y: 1
+    :alpha: 255
+- Bat:
+    :x: 1856.0
+    :y: 224.0
+    :angle: 0
+    :zorder: 100
+    :factor_x: 1
+    :factor_y: 1
+    :alpha: 255
+- Bat:
+    :x: 1952.0
+    :y: 160.0
     :angle: 0
     :zorder: 100
     :factor_x: 1
