--- a/level0.yml
+++ b/level0.yml
@@ -1,1 +1,9 @@
---- []
+---
+- GoalTree:
+    :x: 1504.0
+    :y: 498.0
+    :angle: 0
+    :zorder: 100
+    :factor_x: 1.0
+    :factor_y: 1.0
+    :alpha: 255
