added evil tree

--- a/level1.yml
+++ b/level1.yml
@@ -40,16 +40,16 @@
     :factor_y: 1.0
     :alpha: 255
 - Bat:
-    :x: 56.2976126063364
-    :y: 440.0096469480141
+    :x: 98.09711890322804
+    :y: 439.9999999998905
     :angle: 0
     :zorder: 100
     :factor_x: 1.0
     :factor_y: 1.0
     :alpha: 255
 - Bat:
-    :x: 33.459383171031945
-    :y: 163.72487693626158
+    :x: 47.265554484104676
+    :y: 342.94153502678074
     :angle: 0
     :zorder: 100
     :factor_x: 1.0
@@ -64,8 +64,16 @@
     :factor_y: 1.0
     :alpha: 255
 - Bat:
-    :x: 362.38260423528874
+    :x: 340.38260423528874
     :y: 360.7827845854657
+    :angle: 0
+    :zorder: 100
+    :factor_x: 1.0
+    :factor_y: 1.0
+    :alpha: 255
+- EvilTree:
+    :x: 720.0
+    :y: 497.0
     :angle: 0
     :zorder: 100
     :factor_x: 1.0
