Add jump animation

--- a/level1.yml
+++ b/level1.yml
@@ -40,16 +40,16 @@
     :factor_y: 1.0
     :alpha: 255
 - Bat:
-    :x: 98.09711890322804
-    :y: 439.9999999998905
+    :x: 100.32253169386526
+    :y: 440.0015729306903
     :angle: 0
     :zorder: 100
     :factor_x: 1.0
     :factor_y: 1.0
     :alpha: 255
 - Bat:
-    :x: 47.265554484104676
-    :y: 342.94153502678074
+    :x: 98.68067107468273
+    :y: 439.9900684987334
     :angle: 0
     :zorder: 100
     :factor_x: 1.0
@@ -64,7 +64,7 @@
     :factor_y: 1.0
     :alpha: 255
 - Bat:
-    :x: 340.38260423528874
+    :x: 349.38260423528874
     :y: 360.7827845854657
     :angle: 0
     :zorder: 100
@@ -72,8 +72,16 @@
     :factor_y: 1.0
     :alpha: 255
 - EvilTree:
-    :x: 720.0
-    :y: 497.0
+    :x: 792.0
+    :y: 504.0
+    :angle: 0
+    :zorder: 100
+    :factor_x: 1.0
+    :factor_y: 1.0
+    :alpha: 255
+- PassableBox:
+    :x: 627.0
+    :y: 313.0
     :angle: 0
     :zorder: 100
     :factor_x: 1.0
