--- a/level1.yml
+++ b/level1.yml
@@ -16,7 +16,7 @@
     :factor_y: 1.0
     :alpha: 255
 - Bat:
-    :x: 210.0
+    :x: 270.0
     :y: -1061.0
     :angle: 0
     :zorder: 100
@@ -24,7 +24,7 @@
     :factor_y: 1.0
     :alpha: 255
 - Bat:
-    :x: 100.0
+    :x: 180.0
     :y: -1061.0
     :angle: 0
     :zorder: 100
@@ -32,7 +32,7 @@
     :factor_y: 1.0
     :alpha: 255
 - Bat:
-    :x: 532.0
+    :x: 522.0
     :y: -1421.0
     :angle: 0
     :zorder: 100
@@ -48,7 +48,7 @@
     :factor_y: 1.0
     :alpha: 255
 - Bat:
-    :x: 262.0
+    :x: 250.0
     :y: -1061.0
     :angle: 0
     :zorder: 100
@@ -56,7 +56,7 @@
     :factor_y: 1.0
     :alpha: 255
 - Bat:
-    :x: 176.0
+    :x: 192.0
     :y: -1061.0
     :angle: 0
     :zorder: 100
@@ -64,16 +64,16 @@
     :factor_y: 1.0
     :alpha: 255
 - Doctor:
-    :x: -14497.199999996084
-    :y: 232092.5
+    :x: -18572.39999999886
+    :y: 296878.5
     :angle: 0
     :zorder: 300
     :factor_x: 1.0
     :factor_y: 1.0
     :alpha: 255
 - Platform:
-    :x: 494.0
-    :y: 288.0
+    :x: 731.0
+    :y: 306.0
     :angle: 0
     :zorder: 100
     :factor_x: 1.0
@@ -96,16 +96,16 @@
     :factor_y: 1.0
     :alpha: 255
 - Pipe2:
-    :x: 720.0
-    :y: 440.0
+    :x: 972.0
+    :y: 439.0
     :angle: 0
     :zorder: 100
     :factor_x: 1.0
     :factor_y: 1.0
     :alpha: 255
 - Platform:
-    :x: 432.0
-    :y: 288.0
+    :x: 600.0
+    :y: 378.0
     :angle: 0
     :zorder: 100
     :factor_x: 1.0
@@ -128,18 +128,26 @@
     :factor_y: 1.0
     :alpha: 255
 - Platform:
-    :x: 288.0
-    :y: 216.0
+    :x: 486.0
+    :y: 378.0
     :angle: 0
     :zorder: 100
     :factor_x: 1.0
     :factor_y: 1.0
     :alpha: 255
 - Doctor:
-    :x: 506.0
-    :y: 440.0
+    :x: -3569.2000000002336
+    :y: 57135.0
     :angle: 0
     :zorder: 300
-    :factor_x: 1
-    :factor_y: 1
+    :factor_x: 1.0
+    :factor_y: 1.0
+    :alpha: 255
+- Saw:
+    :x: 2556.0
+    :y: 270.0
+    :angle: 0
+    :zorder: 100
+    :factor_x: 1.0
+    :factor_y: 1.0
     :alpha: 255
