--- a/level1.yml
+++ b/level1.yml
@@ -1,22 +1,22 @@
 ---
 - Car:
-    :x: 1120.0
-    :y: 416.0
+    :x: 1062.0
+    :y: 450.0
     :angle: 0
     :zorder: 100
     :factor_x: 1.0
     :factor_y: 1.0
     :alpha: 255
 - GoalTree:
-    :x: 2016.0
-    :y: 504.0
+    :x: 2628.0
+    :y: 486.0
     :angle: 0
     :zorder: 100
     :factor_x: 1.0
     :factor_y: 1.0
     :alpha: 255
 - Bat:
-    :x: 270.0
+    :x: 155.0
     :y: -1061.0
     :angle: 0
     :zorder: 100
@@ -24,7 +24,7 @@
     :factor_y: 1.0
     :alpha: 255
 - Bat:
-    :x: 180.0
+    :x: 163.0
     :y: -1061.0
     :angle: 0
     :zorder: 100
@@ -32,7 +32,7 @@
     :factor_y: 1.0
     :alpha: 255
 - Bat:
-    :x: 522.0
+    :x: 545.0
     :y: -1421.0
     :angle: 0
     :zorder: 100
@@ -40,15 +40,15 @@
     :factor_y: 1.0
     :alpha: 255
 - EvilTree:
-    :x: 1584.0
-    :y: 504.0
+    :x: 1530.0
+    :y: 486.0
     :angle: 0
     :zorder: 100
     :factor_x: 1.0
-    :factor_y: 1.0
+    :factor_y: 2.0727272727272728
     :alpha: 255
 - Bat:
-    :x: 250.0
+    :x: 313.0
     :y: -1061.0
     :angle: 0
     :zorder: 100
@@ -56,7 +56,7 @@
     :factor_y: 1.0
     :alpha: 255
 - Bat:
-    :x: 192.0
+    :x: 265.0
     :y: -1061.0
     :angle: 0
     :zorder: 100
@@ -64,47 +64,47 @@
     :factor_y: 1.0
     :alpha: 255
 - Doctor:
-    :x: -18572.39999999886
-    :y: 296878.5
+    :x: -30631.500000018357
+    :y: 490076.5
     :angle: 0
     :zorder: 300
     :factor_x: 1.0
     :factor_y: 1.0
     :alpha: 255
 - Platform:
-    :x: 731.0
-    :y: 306.0
+    :x: 1178.0
+    :y: 180.0
     :angle: 0
     :zorder: 100
     :factor_x: 1.0
     :factor_y: 1.0
     :alpha: 255
 - BoxDouble:
-    :x: 144.0
-    :y: 440.0
+    :x: 52.0
+    :y: 483.0
     :angle: 0
     :zorder: 100
     :factor_x: 1.0
     :factor_y: 1.0
     :alpha: 255
 - Pipe:
-    :x: 360.0
-    :y: 441.0
+    :x: 198.0
+    :y: 486.0
     :angle: 0
     :zorder: 100
     :factor_x: 1.0
     :factor_y: 1.0
     :alpha: 255
 - Pipe2:
-    :x: 972.0
-    :y: 439.0
+    :x: 738.0
+    :y: 486.0
     :angle: 0
     :zorder: 100
     :factor_x: 1.0
     :factor_y: 1.0
     :alpha: 255
 - Platform:
-    :x: 600.0
+    :x: 648.0
     :y: 378.0
     :angle: 0
     :zorder: 100
@@ -112,8 +112,8 @@
     :factor_y: 1.0
     :alpha: 255
 - WoodFence:
-    :x: 773.0
-    :y: 440.0
+    :x: 252.0
+    :y: 486.0
     :angle: 0
     :zorder: 100
     :factor_x: 1.0
@@ -121,14 +121,14 @@
     :alpha: 255
 - WoodFence:
     :x: -144.0
-    :y: 440.0
+    :y: 481.0
     :angle: 0
     :zorder: 100
     :factor_x: 1.0
     :factor_y: 1.0
     :alpha: 255
 - Platform:
-    :x: 486.0
+    :x: 534.0
     :y: 378.0
     :angle: 0
     :zorder: 100
@@ -136,16 +136,56 @@
     :factor_y: 1.0
     :alpha: 255
 - Doctor:
-    :x: -3569.2000000002336
-    :y: 57135.0
+    :x: -15628.299999995626
+    :y: 250333.0
     :angle: 0
     :zorder: 300
     :factor_x: 1.0
     :factor_y: 1.0
     :alpha: 255
 - Saw:
-    :x: 2556.0
-    :y: 270.0
+    :x: 2106.0
+    :y: 198.0
+    :angle: 11954
+    :zorder: 100
+    :factor_x: 1.0
+    :factor_y: 1.0
+    :alpha: 255
+- Platform:
+    :x: 878.0
+    :y: 288.0
+    :angle: 0
+    :zorder: 100
+    :factor_x: 1.0
+    :factor_y: 1.0
+    :alpha: 255
+- Platform:
+    :x: 770.0
+    :y: 289.0
+    :angle: 0
+    :zorder: 100
+    :factor_x: 1.0
+    :factor_y: 1.0
+    :alpha: 255
+- BoxDouble:
+    :x: 1836.0
+    :y: 486.0
+    :angle: 0
+    :zorder: 100
+    :factor_x: 1.0
+    :factor_y: 1.0
+    :alpha: 255
+- Pipe2:
+    :x: 1782.0
+    :y: 486.0
+    :angle: 0
+    :zorder: 100
+    :factor_x: 1.0
+    :factor_y: 1.0
+    :alpha: 255
+- Platform:
+    :x: 1286.0
+    :y: 180.0
     :angle: 0
     :zorder: 100
     :factor_x: 1.0
