--- a/level0.yml
+++ b/level0.yml
@@ -7,3 +7,11 @@
     :factor_x: 1.0
     :factor_y: 1.0
     :alpha: 255
+- Doctor:
+    :x: 391.59999999999854
+    :y: 480.0
+    :angle: 0
+    :zorder: 300
+    :factor_x: 1.0
+    :factor_y: 1.0
+    :alpha: 255
