--- a/level1.yml
+++ b/level1.yml
@@ -16,7 +16,7 @@
     :factor_y: 1.0
     :alpha: 255
 - EvilTree:
-    :x: 1458.0
+    :x: 1584.0
     :y: 486.0
     :angle: 0
     :zorder: 100
@@ -24,7 +24,7 @@
     :factor_y: 1.0
     :alpha: 255
 - Platform:
-    :x: 848.0
+    :x: 860.0
     :y: 180.0
     :angle: 0
     :zorder: 100
@@ -56,7 +56,7 @@
     :factor_y: 1.0
     :alpha: 255
 - Platform:
-    :x: 318.0
+    :x: 330.0
     :y: 378.0
     :angle: 0
     :zorder: 100
@@ -80,7 +80,7 @@
     :factor_y: 1.0
     :alpha: 255
 - Platform:
-    :x: 204.0
+    :x: 216.0
     :y: 378.0
     :angle: 0
     :zorder: 100
@@ -88,15 +88,15 @@
     :factor_y: 1.0
     :alpha: 255
 - Saw:
-    :x: 2106.0
-    :y: 198.0
-    :angle: 17512
+    :x: 2124.0
+    :y: 180.0
+    :angle: 17366
     :zorder: 100
     :factor_x: 1.0
     :factor_y: 1.0
     :alpha: 255
 - Platform:
-    :x: 548.0
+    :x: 560.0
     :y: 288.0
     :angle: 0
     :zorder: 100
@@ -104,7 +104,7 @@
     :factor_y: 1.0
     :alpha: 255
 - Platform:
-    :x: 440.0
+    :x: 452.0
     :y: 289.0
     :angle: 0
     :zorder: 100
@@ -128,7 +128,7 @@
     :factor_y: 1.0
     :alpha: 255
 - Platform:
-    :x: 956.0
+    :x: 968.0
     :y: 180.0
     :angle: 0
     :zorder: 100
@@ -145,8 +145,8 @@
     :alpha: 255
 - Saw:
     :x: 3366.0
-    :y: 576.0
-    :angle: 0
+    :y: 562.0
+    :angle: 214
     :zorder: 100
     :factor_x: 1.0
     :factor_y: 1.0
@@ -156,6 +156,46 @@
     :y: 522.0
     :angle: 0
     :zorder: 100
-    :factor_x: 9.142857142857142
-    :factor_y: 0.11428571428571428
+    :factor_x: 80.0
+    :factor_y: 1.0
+    :alpha: 255
+- Bat:
+    :x: 2358.0
+    :y: 90.0
+    :angle: 0
+    :zorder: 100
+    :factor_x: 1
+    :factor_y: 1
+    :alpha: 255
+- Bat:
+    :x: 234.0
+    :y: 126.0
+    :angle: 0
+    :zorder: 100
+    :factor_x: 1.0
+    :factor_y: 1.0
+    :alpha: 255
+- Bat:
+    :x: 3060.0
+    :y: 216.0
+    :angle: 0
+    :zorder: 100
+    :factor_x: 1
+    :factor_y: 1
+    :alpha: 255
+- Floor:
+    :x: 702.0
+    :y: 270.0
+    :angle: 0
+    :zorder: 100
+    :factor_x: 1
+    :factor_y: 1
+    :alpha: 255
+- Bat:
+    :x: 4644.0
+    :y: 234.0
+    :angle: 0
+    :zorder: 100
+    :factor_x: 1
+    :factor_y: 1
     :alpha: 255
