--- a/level1.yml
+++ b/level1.yml
@@ -1,7 +1,7 @@
 ---
 - GoalTree:
-    :x: 6156.0
-    :y: 482.0
+    :x: 6030.0
+    :y: 486.0
     :angle: 0
     :zorder: 100
     :factor_x: 1.0
@@ -16,7 +16,7 @@
     :factor_y: 1.0
     :alpha: 255
 - Platform:
-    :x: 827.0
+    :x: 798.0
     :y: 180.0
     :angle: 0
     :zorder: 100
@@ -48,7 +48,7 @@
     :factor_y: 1.0
     :alpha: 255
 - Platform:
-    :x: 297.0
+    :x: 268.0
     :y: 378.0
     :angle: 0
     :zorder: 100
@@ -72,7 +72,7 @@
     :factor_y: 1.0
     :alpha: 255
 - Platform:
-    :x: 183.0
+    :x: 154.0
     :y: 378.0
     :angle: 0
     :zorder: 100
@@ -81,14 +81,14 @@
     :alpha: 255
 - Saw:
     :x: 2286.0
-    :y: 286.0
-    :angle: 24229
+    :y: 300.5
+    :angle: 23898
     :zorder: 100
     :factor_x: 1.0
     :factor_y: 1.0
     :alpha: 255
 - Platform:
-    :x: 527.0
+    :x: 498.0
     :y: 288.0
     :angle: 0
     :zorder: 100
@@ -96,7 +96,7 @@
     :factor_y: 1.0
     :alpha: 255
 - Platform:
-    :x: 419.0
+    :x: 390.0
     :y: 289.0
     :angle: 0
     :zorder: 100
@@ -120,7 +120,7 @@
     :factor_y: 1.0
     :alpha: 255
 - Platform:
-    :x: 935.0
+    :x: 906.0
     :y: 180.0
     :angle: 0
     :zorder: 100
@@ -137,15 +137,15 @@
     :alpha: 255
 - Saw:
     :x: 3366.0
-    :y: 585.5
-    :angle: 7437
+    :y: 600.0
+    :angle: 7106
     :zorder: 100
     :factor_x: 1.0
     :factor_y: 1.0
     :alpha: 255
 - Bat:
-    :x: 331.3049062229789
-    :y: 327.50278791156995
+    :x: 278.2694891741241
+    :y: 348.5776203811195
     :angle: 0
     :zorder: 500
     :factor_x: 1.0
@@ -257,8 +257,8 @@
     :alpha: 255
 - Saw:
     :x: 990.0
-    :y: 503.5
-    :angle: 5102
+    :y: 518.0
+    :angle: 4771
     :zorder: 100
     :factor_x: 1.0
     :factor_y: 1.0
@@ -288,7 +288,7 @@
     :factor_y: 0.49869451697127937
     :alpha: 255
 - Platform:
-    :x: 3536.0
+    :x: 3507.0
     :y: 306.0
     :angle: 0
     :zorder: 100
@@ -296,7 +296,7 @@
     :factor_y: 1.0
     :alpha: 255
 - Platform:
-    :x: 3644.0
+    :x: 3615.0
     :y: 306.0
     :angle: 0
     :zorder: 100
@@ -304,7 +304,7 @@
     :factor_y: 1.0
     :alpha: 255
 - Platform:
-    :x: 3831.0
+    :x: 3802.0
     :y: 234.0
     :angle: 0
     :zorder: 100
@@ -312,7 +312,7 @@
     :factor_y: 1.0
     :alpha: 255
 - Platform:
-    :x: 3939.0
+    :x: 3910.0
     :y: 234.0
     :angle: 0
     :zorder: 100
@@ -336,7 +336,7 @@
     :factor_y: 1.0
     :alpha: 254
 - Platform:
-    :x: 4137.0
+    :x: 4108.0
     :y: 288.0
     :angle: 0
     :zorder: 100
@@ -353,8 +353,8 @@
     :alpha: 255
 - Saw:
     :x: 4176.0
-    :y: 503.5
-    :angle: 5023
+    :y: 486.0
+    :angle: 4692
     :zorder: 100
     :factor_x: 1.0
     :factor_y: 1.0
@@ -400,7 +400,7 @@
     :factor_y: 1.0
     :alpha: 255
 - Platform:
-    :x: 4868.0
+    :x: 4839.0
     :y: 342.0
     :angle: 0
     :zorder: 100
@@ -408,7 +408,7 @@
     :factor_y: 1.0
     :alpha: 255
 - Platform:
-    :x: 4994.0
+    :x: 4965.0
     :y: 252.0
     :angle: 0
     :zorder: 100
@@ -416,7 +416,7 @@
     :factor_y: 1.0
     :alpha: 255
 - Platform:
-    :x: 5105.0
+    :x: 5076.0
     :y: 252.0
     :angle: 0
     :zorder: 100
@@ -424,7 +424,7 @@
     :factor_y: 1.0
     :alpha: 255
 - Platform:
-    :x: 5282.0
+    :x: 5253.0
     :y: 324.0
     :angle: 0
     :zorder: 100
@@ -441,14 +441,14 @@
     :alpha: 255
 - Saw:
     :x: 5598.0
-    :y: 253.0
-    :angle: 2288
+    :y: 267.5
+    :angle: 1957
     :zorder: 100
     :factor_x: 1.0
     :factor_y: 1.0
     :alpha: 255
 - Bat:
-    :x: 4874.0
+    :x: 4904.0
     :y: 360.0
     :angle: 0
     :zorder: 500
@@ -456,7 +456,7 @@
     :factor_y: 1.0
     :alpha: 255
 - Bat:
-    :x: 5088.0
+    :x: 5118.0
     :y: 324.0
     :angle: 0
     :zorder: 500
@@ -464,7 +464,7 @@
     :factor_y: 1.0
     :alpha: 255
 - Bat:
-    :x: 4982.0
+    :x: 5012.0
     :y: 396.0
     :angle: 0
     :zorder: 500
@@ -472,15 +472,15 @@
     :factor_y: 1.0
     :alpha: 255
 - Doctor:
-    :x: -71.40000000000504
-    :y: 2259.0
+    :x: -81.90000000000487
+    :y: 2476.5
     :angle: 0
     :zorder: 300
     :factor_x: 1.0
     :factor_y: 1.0
     :alpha: 255
 - Bat:
-    :x: 2661.0
+    :x: 2691.0
     :y: 270.0
     :angle: 0
     :zorder: 500
@@ -488,7 +488,7 @@
     :factor_y: 1.0
     :alpha: 255
 - Bat:
-    :x: 2569.0
+    :x: 2599.0
     :y: 288.0
     :angle: 0
     :zorder: 500
@@ -496,7 +496,7 @@
     :factor_y: 1.0
     :alpha: 255
 - Doctor:
-    :x: 5513.549999999575
+    :x: 5503.0499999995645
     :y: 482.0
     :angle: 0
     :zorder: 300
@@ -508,6 +508,14 @@
     :y: 309.0
     :angle: 0
     :zorder: 128
+    :factor_x: 1.0
+    :factor_y: 1.0
+    :alpha: 255
+- Lights:
+    :x: 2729.0
+    :y: 310.0
+    :angle: 0
+    :zorder: 100
     :factor_x: 1
     :factor_y: 1
     :alpha: 255
